# Multimodal-financial-legal-analyst

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SCHEMA_VALIDATION_FIX.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py
app/api/: main.py
app/core/: config.py  logging.py
app/guardrails/: __init__.py  nli.py  verifier.py
app/ingestion/: __init__.py  dispatcher.py  excel_loader.py  image_loader.py  pdf_loader.py
app/llm/: __init__.py  client.py
app/orchestrator/: __init__.py  pipeline.py  prompts.py
app/retrieval/: __init__.py  hybrid.py
app/schemas/: __init__.py  models.py
app/ui/: streamlit_app.py
samples/: README.md
scripts/: make_samples.py  setup_ollama.py
tests/: conftest.py  test_guardrails.py  test_ingestion.py  test_llm_client.py  test_pipeline.py  test_schemas.py
